<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterStep1Fragment">

    <androidx.appcompat.widget.Toolbar
        android:orientation="vertical"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnGoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon_white"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_action_bar"
            android:layout_gravity="center"
            android:fontFamily="@font/audiowide_regular"
            android:text="@string/app_name">

        </TextView>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/margin_layout_login"
        android:layout_marginRight="@dimen/margin_layout_login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register_step1"
            android:textSize="@dimen/text_title_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_bottom_register_text_view"
            android:layout_marginTop="@dimen/margin_top_register_text_view">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_register">

            <EditText
                android:id="@+id/inputLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundInput"
                android:hint="@string/hint_lastname">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_register">

            <EditText
                android:id="@+id/inputFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundInput"
                android:hint="@string/hint_firstname">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_register">

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundInput"
                android:hint="@string/hint_mail"
                android:inputType="textEmailAddress">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_register">

            <EditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundInput"
                android:hint="@string/hint_phone_number"
                android:inputType="phone">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNextStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_layout_login"
            android:background="@color/colorPrimaryLight"
            android:textColor="@color/colorAccent"
            android:text="@string/text_register_next_step">

        </com.google.android.material.button.MaterialButton>

    </RelativeLayout>

</RelativeLayout>