<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:orientation="vertical"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_action_bar"
            android:layout_gravity="center"
            android:fontFamily="@font/audiowide_regular"
            android:text="@string/app_name">

        </TextView>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_layout_login">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_input_login">

            <EditText
                android:id="@+id/inputMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundInput"
                android:hint="@string/hint_mail"
                android:inputType="textEmailAddress">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_input_login">

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundInput"
                android:hint="@string/hint_password"
                android:inputType="textPassword">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGoRegister"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="@dimen/text_button_register"
            android:text="@string/text_button_go_register"
            android:textColor="@color/colorPrimary">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_layout_login"
            android:textColor="@color/colorAccent"
            android:text="@string/text_button_login">

        </Button>

    </RelativeLayout>

</RelativeLayout>